--- a/Blog.Admin/Resources/CommonResources.zh.resx
+++ b/Blog.Admin/Resources/CommonResources.zh.resx
@@ -138,4 +138,22 @@
     <data name="忘记密码？" xml:space="preserve">
         <value>忘记密码？</value>
     </data>
+    <data name="编辑类别" xml:space="preserve">
+        <value>编辑类别</value>
+    </data>
+    <data name="新增类别" xml:space="preserve">
+        <value>新增类别</value>
+    </data>
+    <data name="新增话题" xml:space="preserve">
+        <value>新增话题</value>
+    </data>
+    <data name="编辑话题" xml:space="preserve">
+        <value>编辑话题</value>
+    </data>
+    <data name="创建文章" xml:space="preserve">
+        <value>创建文章</value>
+    </data>
+    <data name="编辑文章" xml:space="preserve">
+        <value>编辑文章</value>
+    </data>
 </root>
