fix: bad translation

--- a/Blog.Admin/Resources/CommonResources.zh.resx
+++ b/Blog.Admin/Resources/CommonResources.zh.resx
@@ -187,7 +187,7 @@
         <value>--  选择语言 --</value>
     </data>
     <data name="中文" xml:space="preserve">
-        <value>中国語</value>
+        <value>中文</value>
     </data>
     <data name="创建网站地图" xml:space="preserve">
         <value>创建网站地图</value>
