--- a/Blog.Admin/Resources/CommonResources.ja.resx
+++ b/Blog.Admin/Resources/CommonResources.ja.resx
@@ -204,4 +204,19 @@
     <data name="密码" xml:space="preserve">
         <value>パスワード</value>
     </data>
+    <data name="日常（Topic）" xml:space="preserve">
+        <value>日常</value>
+    </data>
+    <data name="游戏（Topic）" xml:space="preserve">
+        <value>ゲーム</value>
+    </data>
+    <data name="想法（Category）" xml:space="preserve">
+        <value>かんがえ</value>
+    </data>
+    <data name="话题筛选（Nav）" xml:space="preserve">
+        <value>トピックス選択</value>
+    </data>
+    <data name="搜索（Nav）" xml:space="preserve">
+        <value>{0}検索</value>
+    </data>
 </root>
