--- a/Blog.Web/Resources/CommonResources.resx
+++ b/Blog.Web/Resources/CommonResources.resx
@@ -29,4 +29,22 @@
     <data name="热门话题" xml:space="preserve">
         <value>Popular Topics</value>
     </data>
+    <data name="想法（Category）" xml:space="preserve">
+        <value>Thinking</value>
+    </data>
+    <data name="搜索（Nav）" xml:space="preserve">
+        <value>Search {0}</value>
+    </data>
+    <data name="日常（Topic）" xml:space="preserve">
+        <value>Daily Life</value>
+    </data>
+    <data name="游戏（Topic）" xml:space="preserve">
+        <value>Game</value>
+    </data>
+    <data name="话题筛选（Nav）" xml:space="preserve">
+        <value>Select Topic</value>
+    </data>
+    <data name="计算机编程（Category）" xml:space="preserve">
+        <value>Computer Programming</value>
+    </data>
 </root>
