--- a/Blog.Web/Resources/CommonResources.zh.resx
+++ b/Blog.Web/Resources/CommonResources.zh.resx
@@ -21,4 +21,22 @@
     <data name="热门话题" xml:space="preserve">
         <value>热门话题</value>
     </data>
+    <data name="想法（Category）" xml:space="preserve">
+        <value>想法</value>
+    </data>
+    <data name="搜索（Nav）" xml:space="preserve">
+        <value>搜索{0}</value>
+    </data>
+    <data name="日常（Topic）" xml:space="preserve">
+        <value>日常</value>
+    </data>
+    <data name="游戏（Topic）" xml:space="preserve">
+        <value>游戏</value>
+    </data>
+    <data name="话题筛选（Nav）" xml:space="preserve">
+        <value>话题筛选</value>
+    </data>
+    <data name="计算机编程（Category）" xml:space="preserve">
+        <value>计算机编程</value>
+    </data>
 </root>
